--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ services:
   # PostgreSQL Database
   postgres:
     image: postgres:15-alpine
-    container_name: mi-coche-ideal-db
+    container_name: vehiculos-usados-db
     environment:
-      POSTGRES_DB: mi_coche_ideal
+      POSTGRES_DB: vehiculos_usados
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
     ports:
@@ -20,12 +20,12 @@ services:
       timeout: 5s
       retries: 5
     networks:
-      - mi-coche-ideal-network
+      - vehiculos-usados-network
 
   # Redis Cache
   redis:
     image: redis:7-alpine
-    container_name: mi-coche-ideal-redis
+    container_name: vehiculos-usados-redis
     ports:
       - "6379:6379"
     volumes:
@@ -36,18 +36,18 @@ services:
       timeout: 5s
       retries: 5
     networks:
-      - mi-coche-ideal-network
+      - vehiculos-usados-network
 
   # API Service
   api:
     build: .
-    container_name: mi-coche-ideal-api
+    container_name: vehiculos-usados-api
     environment:
       NODE_ENV: development
       PORT: 3000
       DB_HOST: postgres
       DB_PORT: 5432
-      DB_NAME: mi_coche_ideal
+      DB_NAME: vehiculos_usados
       DB_USER: postgres
       DB_PASSWORD: password
       DB_SSL: false
@@ -79,13 +79,13 @@ services:
       retries: 3
       start_period: 40s
     networks:
-      - mi-coche-ideal-network
+      - vehiculos-usados-network
     restart: unless-stopped
 
   # Prometheus for metrics
   prometheus:
     image: prom/prometheus:latest
-    container_name: mi-coche-ideal-prometheus
+    container_name: vehiculos-usados-prometheus
     ports:
       - "9090:9090"
     volumes:
@@ -99,12 +99,12 @@ services:
       - '--storage.tsdb.retention.time=200h'
       - '--web.enable-lifecycle'
     networks:
-      - mi-coche-ideal-network
+      - vehiculos-usados-network
 
   # Grafana for visualization
   grafana:
     image: grafana/grafana:latest
-    container_name: mi-coche-ideal-grafana
+    container_name: vehiculos-usados-grafana
     ports:
       - "3001:3000"
     environment:
@@ -112,7 +112,7 @@ services:
     volumes:
       - grafana_data:/var/lib/grafana
     networks:
-      - mi-coche-ideal-network
+      - vehiculos-usados-network
 
 volumes:
   postgres_data:
@@ -121,5 +121,5 @@ volumes:
   grafana_data:
 
 networks:
-  mi-coche-ideal-network:
+  vehiculos-usados-network:
     driver: bridge 
